appId: com.caiodeiro.calcclt
---
- tapOn:
    id: "form_admission_date"
    label: "Data de admissão"
- inputText: ${ADMISSION}
- tapOn:
    id: "form_termination_date"
    label: "Data de desligamento"
- inputText: "15062025"
- tapOn:
    id: "form_base_salary"
    label: "Salário base"
- inputText: ${SALARY}
- tapOn:
    id: "form_calculate_button"
    label: "Calcular"
